--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
+      <dependency>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty-runner</artifactId>
+          <version>7.5.4.v20111024</version>
+      </dependency>
   </dependencies>
   <build>
   <finalName>heloworld</finalName>
