--- a/projects/common/pom.xml
+++ b/projects/common/pom.xml
@@ -12,4 +12,11 @@
     <name>vuser-common</name>
     <description>vuser common module</description>
 
+<dependencies>
+    <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.0</version>
+    </dependency>
+</dependencies>
 </project>
