--- a/projects/domain/pom.xml
+++ b/projects/domain/pom.xml
@@ -21,6 +21,10 @@
             <groupId>com.vuser</groupId>
             <artifactId>vuser-common</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
     </dependencies>
 </project>
